--- a/src/posts/committee/2022-4/content.mdx
+++ b/src/posts/committee/2022-4/content.mdx
@@ -17,6 +17,7 @@ thumbnail: /posts/committee/committee.jpg
 - 성원보고
 - 개회선언 및 인사말
 - 토의 안건 상정
+  - 퇴직금연금제도 전환에 대한 안건
   - 사회복지사 성과급(특별수당) 지급
   - 2023년 세입 및 세출 예산(안) 보고
   - 기타 보고
