--- a/src/posts/committee/2023-2/content.mdx
+++ b/src/posts/committee/2023-2/content.mdx
@@ -16,6 +16,7 @@ thumbnail: /posts/committee/committee.jpg
 4. 보고사항
 - 성원보고
 - 개회선언 및 인사말
+- 23년 1차 운영위원회에 토의 결과 반영보고
 - 토의 안건 상정
   - 여름나기 위한 대상자 어르신들에 대한 케어
   - 기타 보고
